src/app/movies/[id]/sections/Cast.module.scss
@use "@/styles/util";
@import "@/styles/media";

.cast {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding-block: var(--section-spacing);

  .castList {
    gap: 2rem;
    @include media("<md") { gap: 1rem; }

    .person {
      display: flex;
      width: 12rem;
      flex-direction: column;
      @include media("<md") { width: 8rem; }

      .personPhoto,
      .personInitials {
        border: 1px solid var(--theme-outline);
        aspect-ratio: 4/5;
        background-color: var(--dynamic-gray-150);
      }

      .personPhoto {
        object-fit: cover;
        object-position: center;
      }

      .personInitials {
        display: grid;
        font-size: 3rem;
        place-content: center;
      }

      .personName {
        margin-top: 1rem;
        color: var(--theme-text-heading);
        font-size: 1.125rem;
        @include util.truncate();
      }

      .personCharacter {
        margin-top: 0.5rem;
      }
    }
  }
}

.castModalLayout {
  display: flex;
  align-items: flex-start;
  gap: 1rem;

  .departmentList {
    position: sticky;
    top: 0;
    display: flex;
    width: 20%;
    flex-direction: column;
    gap: 1rem;
    list-style: none;

    .departmentTitle {
      position: relative;
      color: var(--theme-text-body);

      &:hover { color: var(--theme-text-heading); }
      &[data-state="active"] {
        color: var(--theme-text-heading);
        font-weight: 500;

        &::before {
          display: inline-block;
          padding: 2px;
          padding: 1.5px;
          border-radius: 50%;
          margin: 0 0.5rem 0.125rem calc(-3px - 0.5rem);
          background-color: currentColor;
          content: "";
          vertical-align: middle;
        }
      }
    }
  }

  .fullCastCrewList {
    flex-grow: 1;

    .groupTable {
      width: 100%;
      border-collapse: collapse;

      &:not(:first-child) { margin-top: 2rem; }

      thead {
        position: sticky;
        top: 0;
        height: 32px;
        padding-top: 2rem;

        .groupTitle {
          position: absolute;
          width: 100%;
          padding-bottom: 1rem;
          background-color: var(--dynamic-gray-150);
          font-size: 1.125rem;
          font-weight: 500;
        }
      }

      tr { text-align: left; }

      .person {
        border-block: 2px solid transparent;

        &:nth-child(odd) td { background-color: var(--dynamic-gray-200); }

        td {
          &:first-of-type { width: 80px; }
          &:last-of-type { width: 50%; }
        }

        .personPhoto,
        .personInitials {
          width: 4rem;
          border: 1px solid var(--theme-outline);
          aspect-ratio: 4/5;
          background-color: var(--dynamic-gray-200);
        }

        .personPhoto {
          display: grid;
          object-fit: cover;
          object-position: center;
        }

        .personInitials {
          display: grid;
          font-size: 1.25rem;
          place-content: center;
        }
      }
    }
  }
}

